# practicas

./: .gitignore  Dockerfile  README.md  docker-compose.yml
dockerized_airflow/: .gitignore  Dockerfile  airflowcito.yaml  docker-compose.yaml  requirements.txt
dockerized_dbt/: .docker-compos.yaml.swp  docker-compose.yaml
practica_1/: cargar_datos_desde_csv.sql  crear_tablas.sql  docker-compose.yaml  file_sample.txt  leer_eventsim.py  taller1.sql
practica_data_governance/: docker-compose.yaml
practica_data_quality/: Dockerfile  docker-compose.yaml  pyproject.toml
practica_data_quality/data/: data.sql  tables.sql
practica_data_quality/gq/: codigo.py
practica_data_quality/gx/: great_expectations.yml
practica_data_quality/gx/expectations/: .ge_store_backend_id
practica_data_quality/gx/gx/: great_expectations.yml
practica_data_quality/gx/gx/checkpoints/: my_quickstart_checkpoint.yml  my_sql_checkpoint.yml  turnstiles_checkpoint.yml
practica_data_quality/gx/gx/expectations/: .ge_store_backend_id  suite.json
practica_hdfs/: README.md  config  docker-compose.yaml
practica_nosql/: Dockerfile  docker-compose.yaml
practica_optimizacion/: .gitignore  docker-compose.yaml
practica_recuperacion/: Dockerfile  Dockerfile.alpine  README.md  connector.json  docker-compose.yaml
practica_serializacion/: batcher.py  create_dataset.py  dataset_utils.py  db_analitica.ipynb  requirements  run_minio.sh  serializacion.ipynb
practica_sql/: Consultas.ipynb
practica_streaming/: Dockerfile  docker-compose.yaml
practica_trx/: .gitignore  Dockerfile  README.md  (+1 more)
(+35 files in other folders)
